# csv-to-db

./: .gitignore  README.md  pyproject.toml
csv_to_db/: cli.py  db.py  files.py  utils.py  watcher.py
data/: base_config.yml
tests/: test_csv_sqlite.py
